spade-tests/src/snapshots/spade_tests__ast_lowering__structs_can_not_be_no_mangle.snap
---
source: spade-tests/src/ast_lowering.rs
---
#[no_mangle]
struct X {
}

error: no_mangle is not a valid attribute for struct
  ┌─ testinput:1:1
  │
1 │ #[no_mangle]
  │ ^^^^^^^^^^^^ Unrecognised attribute


